2006-01-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Fix another strict aliasing problem.

	* glib/gthreadpool.c: Avoid use of varargs macro.  (#325864,
	Kazuki IWAMOTO)

2006-01-04  Manish Singh  <yosh@gimp.org>

	* glib/glib.symbols
	* glib/gstdio.h: don't macroized g_access, g_chdir, and g_unlink
	either, since they have the same issue as g_rmdir. (Related to
	bug #325249)

Wed Jan  4 13:33:25 2006  Tim Janik  <timj@gtk.org>

	* glib/gslice.c (magazine_cache_pop_magazine): don't reverse chunk 
	order when creating magazines, so we hand out chunks with ascending
	adresses.

2006-01-04  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ml" "zh_HK" to ALL_LINGUAS.

2006-01-03  Martyn Russell  <martyn@imendio.com>

	* docs/reference/glib/glib-sections.txt:
	* glib/glib.symbols:
	* glib/gthreadpool.[ch]:
	- Added new API g_thread_pool_get_idle_time() and
	g_thread_pool_set_idle_time(). (#324228).
	
	* tests/threadpool-test.c: 
	- Updated test case to do thread pool sorting, thread pool with
	no sorting and a thread pool with idle thread timeouts.
	
2006-01-03  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/gmain.h: Add new functions here, too.

	* glib/glib.symbols: Add new functions.

2005-12-20  Michael Meeks  <michael.meeks@novell.com>

	* glib/gmain.c (g_main_context_is_owner): new method
	to determine if the current thread is the owner of the
	context.

2006-01-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: 
	* glib/gstdio.h: 
	* glib/gstdio.c (g_rmdir): Don't provide g_rmdir() as a macro
	expanding to rmdir, since rmdir is not declared in a portable
	system header we can include in gstdio.h.  (#325249, Jani Monoses)

2006-01-01  Tor Lillqvist  <tml@novell.com>

	* glib/gspawn-win32.c (g_spawn_sync_utf8): Set the GIOChannels for
	stdout and stderr to unbuffered. Otherwise the giochannel layer
	will try to read from them regardless whether the
	g_io_channel_win32_poll() call here has indicated