@@ -1,5 +1,8 @@
 2006-01-05  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gmain.c: Clarify the documentation of source ids
+	a bit.  (#325874, Dan Williams)
+
 	* configure.in: Fix another strict aliasing problem.
 
 	* glib/gthreadpool.c: Avoid use of varargs macro.  (#325864,
